--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title data-track-gtm-title="RODRIGUEZ LAW GROUP">RODRIGUEZ LAW GROUP | PERSONAL INJURY AND WORKERS COMPENSATION ATTORNEY</title>
+    <title data-track-gtm-title="RODRIGUEZ LAW GROUP | PERSONAL INJURY AND WORKERS COMPENSATION ATTORNEY">RODRIGUEZ LAW GROUP</title>
     <meta
       name="description"
       content="focuses his practice on personal injury and workers’ compensation matters."
